Fixed Airtime badge spacing

--- a/airtime_mvc/public/css/embeddable-player.css
+++ b/airtime_mvc/public/css/embeddable-player.css
@@ -1,6 +1,6 @@
 .airtime_player {
     width: 270px;
-    height: 172px;
+    height: 180px;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -38,6 +38,7 @@
     padding-right: 30px;
 }
 .airtime_pro {
+    margin: 0px 20px;
     color: #fff;
     font-size: 10px;
     text-decoration: none;
@@ -169,12 +170,13 @@
 }
 
 .airtime_schedule {
-    margin: 10px 20px 10px 20px;
+    margin: 10px 20px 5px 20px;
     padding-top: 10px;
     font-size: 14px;
     color: #aaaaaa;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
-    padding-bottom: 5px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    padding-bottom: 0px;
 }
 
 .airtime_next {
